# filewatcher

./: CMakeLists.txt  common-project-include.in  project-meta-info.in
include/: filewatcher.hpp  utility.hpp
src/: filewatcher.cpp  main.cpp
